added and corrected formula, minor changes
- Added formula for mixing temperature
- Corrected formula for heat requirements of a building
- minor changes

--- a/sections/Hydrostatik.tex
+++ b/sections/Hydrostatik.tex
@@ -138,7 +138,8 @@
 	
 	\subsubsection{Statischer Auftrieb (Archimedisches Prinzip)}
 		\begin{minipage}[t]{13cm}
-			Der Auftrieb eines in ein Fluid eingetauchten Körpers ist gleich dem Gewicht des von ihm verdrängten Fluids.\\ \\
+			Der Auftrieb eines in ein Fluid eingetauchten Körpers ist gleich dem Gewicht des von ihm verdrängten Fluids.\\
+			Der Auftrieb ist unabhängig von der Tiefe!\\ \\
 			\renewcommand{\arraystretch}{1.5}
 			\begin{tabular}{ p{4cm} p{7cm}}
 				$F_A = F_G$	&	$F_A$ = Auftriebskraft in $N$\\
