--- a/sections/KonstantenGriechischeBuchstaben.tex
+++ b/sections/KonstantenGriechischeBuchstaben.tex
@@ -123,7 +123,7 @@
 		\end{tabular}
 
 \vspace{1cm}
-\section{Griechsiche Buchstaben}
+\section{Griechische Buchstaben}
 	\renewcommand{\arraystretch}{1.5}
 	\begin{tabular}{| p{0.7cm} p{0.7cm} p{0.7cm} p{2cm} | p{0.7cm} p{0.7cm} p{0.7cm} p{2cm} | p{0.7cm} p{0.7cm} p{0.7cm} p{2cm} | }
 		\hline
