added and corrected formulas, minor changes
- corrected description of amount of substance, Avogadro constant and formula of Newton's friction law
- minor changes

--- a/Ph2HAT.tex
+++ b/Ph2HAT.tex
@@ -1,7 +1,7 @@
 %Dokumentinformationen
 \newcommand{\titleinfo}{Ph2HAT - Formelsammlung}
 \newcommand{\authorinfo}{S. Roth, F. Söllner}
-\newcommand{\versioninfo}{v1.0 / Juli 2019}
+\newcommand{\versioninfo}{v1.0 / August 2019}
 \newcommand{\licence}{CC BY-NC-SA}
 
 
@@ -33,6 +33,7 @@
 \DeclareMathOperator\arcoth{arcoth}
 
 \begin{document}
+\maketitle
 \tableofcontents
 \input{sections/Hydrostatik}
 \input{sections/Hydrodynamik}
