--- a/sections/Hydrodynamik.tex
+++ b/sections/Hydrodynamik.tex
@@ -26,11 +26,12 @@
 				\end{flushleft}
 				\quad
 				\renewcommand{\arraystretch}{2}
-				\begin{tabular}{ p{5.5cm} p{7cm}}
+				\begin{tabular}{ p{5.5cm} | p{7cm}}
 					$\Delta m_1 = \Delta m_2$	&	$m$ = Masse in $kg$\\
 					$\underbrace{\rho \cdot A_1 \cdot v_1 \cdot \Delta t}_{\Delta m_1} = \underbrace{\rho \cdot A_2 \cdot v_2 \cdot \Delta t}_{\Delta m_2}$	&	$\rho$ = Dichte Fluid in $\frac{kg}{m^3}$\\
 					$A_1 \cdot v_1 = A_2 \cdot v_2$	&	$A$ = Querschnittsfläche Rohr in $m^2$\\
-					$A \cdot v = konstant$	&	$v$ = Flussgeschwindigkeit Fluid in $\frac{m}{s}$\\
+					$A \cdot v = \dot{V} = \dfrac{\Delta V}{\Delta t} = konstant$	&	$v$ = Flussgeschwindigkeit Fluid in $\frac{m}{s}$\\
+					&	$\dot{V}$ = Volumenstrom in $\frac{m^3}{s}$\\
 				\end{tabular}
 				\renewcommand{\arraystretch}{1}
 		\end{minipage}
@@ -86,7 +87,7 @@
 				\renewcommand{\arraystretch}{2.5}
 				\begin{tabular}{ p{4cm} | p{7cm}}
 					$\tau = \dfrac{F_\parallel}{A} = \eta \dfrac{\mathrm{d}v}{\mathrm{d}z}$	&	$\tau$ = Schubspannung in $\frac{N \cdot s}{m^2} \cdot \frac{m}{s \cdot m} = \frac{N}{m^2}$\\
-					$F_R = \eta \cdot A \frac{\mathrm{d}v}{\mathrm{d}y} = \tau \cdot A$ & $v$ = Geschwindigkeit Platte in $\frac{m}{s}$\\
+					$F_R = \eta \cdot A \dfrac{\mathrm{d}v}{\mathrm{d}z} = \tau \cdot A$ & $v$ = Geschwindigkeit Platte in $\frac{m}{s}$\\
 				\end{tabular}
 				\renewcommand{\arraystretch}{1.5}
 				\begin{tabular}{ p{4cm} | p{10cm} }
